--- a/index.html
+++ b/index.html
@@ -25,15 +25,26 @@
         </div>
         <div class="nav">
           <ul class="inr">
-            <li class="menu active"><a><div class="img"><img src="deville.svg"/></div><span class="fnt-menu">De ville</span></a></li>
-            <li class="menu"><a><div class="img"><img src="deville.svg"/></div><span class="fnt-menu">De ville</span></a></li>
-            <li class="menu"><a><div class="img"><img src="bouclette.svg"/></div><span class="fnt-menu">De ville</se villen></a></li>
-            <li class="menu"><a><div class="img"><img src="fantaisie.svg"/></div><span class="fnt-menu">De ville</span></a></li>
-            <li class="menu"><a><div class="img"><img src="soquettes.svg"/></div><span class="fnt-menu">De ville</span></a></li>
-            <li class="menu"><a><div class="img"><img src="collants.svg"/></div><span class="fnt-menu">De ville</span></a></li>
+            <li class="menu active"><a><div class="img"><img src="deville.svg"/></div><span class="fnt-menu">De ville</span><span class="sml-txt">Lisses et hautes</span></a></li>
+            <li class="menu inactive"><a><div class="img"><img src="deville.svg"/></div><span class="fnt-menu">De luxe</span><span class="sml-txt">Mi-bas Fil d'écosse</span></a></li>
+            <li class="menu inactive"><a><div class="img"><img src="bouclette.svg"/></div><span class="fnt-menu">Bouclette</span><span class="sml-txt">Douces & chaudes</span></a></li>
+            <li class="menu inactive"><a><div class="img"><img src="fantaisie.svg"/></div><span class="fnt-menu">Fantaisie</span><span class="sml-txt">Drôles de chaussettes</span></a></li>
+            <li class="menu inactive"><a><div class="img"><img src="soquettes.svg"/></div><span class="fnt-menu">Socquette</span><span class="sml-txt">Courtes & fines</span></a></li>
+            <li class="menu inactive"><a><div class="img"><img src="collants.svg"/></div><span class="fnt-menu">Collant</span><span class="sml-txt">Pour Femme</span></a></li>
           </ul>
         </div>
     </header>
+    <div class="container">
+      <div class="">
+        <h1 class="mrg">Chausettes de ville</h1>
+
+
+
+
+      </div>
+    </div>
+
+
 
 
 
