corp du site commencer

--- a/index.html
+++ b/index.html
@@ -1,52 +1,79 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Archiduchesse</title>
     <link rel="shortcut icon" href="//www.archiduchesse.com/img/favicon.ico">
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <div class="container">
-        <div class="logo">
+        <div class="container">
+            <div class="logo">
 
-        </div>
-        <div class="bouton">
-          <ul>
-            <li><a class="btn-hvr">Shop</a></li>
-            <li><a class="btn-hvr">Blog</a></li>
-            <li><a class="btn-hvr">Info.</a></li>
-            <li><a class="btn-hvr">Atelier</a></li>
-          </ul>
-        </div>
-        <div class="carte">
+            </div>
+            <div class="bouton">
+                <ul>
+                    <li><a class="btn-hvr">Shop</a></li>
+                    <li><a class="btn-hvr">Blog</a></li>
+                    <li><a class="btn-hvr">Info.</a></li>
+                    <li><a class="btn-hvr">Atelier</a></li>
+                </ul>
+            </div>
+            <div class="carte">
 
-        </div>
-        <div class="nav">
-          <ul class="inr">
-            <li class="menu active"><a><div class="img"><img src="deville.svg"/></div><span class="fnt-menu">De ville</span><span class="sml-txt">Lisses et hautes</span></a></li>
-            <li class="menu inactive"><a><div class="img"><img src="deville.svg"/></div><span class="fnt-menu">De luxe</span><span class="sml-txt">Mi-bas Fil d'écosse</span></a></li>
-            <li class="menu inactive"><a><div class="img"><img src="bouclette.svg"/></div><span class="fnt-menu">Bouclette</span><span class="sml-txt">Douces & chaudes</span></a></li>
-            <li class="menu inactive"><a><div class="img"><img src="fantaisie.svg"/></div><span class="fnt-menu">Fantaisie</span><span class="sml-txt">Drôles de chaussettes</span></a></li>
-            <li class="menu inactive"><a><div class="img"><img src="soquettes.svg"/></div><span class="fnt-menu">Socquette</span><span class="sml-txt">Courtes & fines</span></a></li>
-            <li class="menu inactive"><a><div class="img"><img src="collants.svg"/></div><span class="fnt-menu">Collant</span><span class="sml-txt">Pour Femme</span></a></li>
-          </ul>
-        </div>
+            </div>
+            <div class="nav">
+                <ul class="inr">
+                    <li class="menu active">
+                        <a>
+                            <div class="img"><img src="deville.svg" /></div><span class="fnt-menu">De ville</span><span class="sml-txt">Lisses et hautes</span></a>
+                    </li>
+                    <li class="menu inactive">
+                        <a>
+                            <div class="img"><img src="deville.svg" /></div><span class="fnt-menu">De luxe</span><span class="sml-txt">Mi-bas Fil d'écosse</span></a>
+                    </li>
+                    <li class="menu inactive">
+                        <a>
+                            <div class="img"><img src="bouclette.svg" /></div><span class="fnt-menu">Bouclette</span><span class="sml-txt">Douces & chaudes</span></a>
+                    </li>
+                    <li class="menu inactive">
+                        <a>
+                            <div class="img"><img src="fantaisie.svg" /></div><span class="fnt-menu">Fantaisie</span><span class="sml-txt">Drôles de chaussettes</span></a>
+                    </li>
+                    <li class="menu inactive">
+                        <a>
+                            <div class="img"><img src="soquettes.svg" /></div><span class="fnt-menu">Socquette</span><span class="sml-txt">Courtes & fines</span></a>
+                    </li>
+                    <li class="menu inactive">
+                        <a>
+                            <div class="img"><img src="collants.svg" /></div><span class="fnt-menu">Collant</span><span class="sml-txt">Pour Femme</span></a>
+                    </li>
+                </ul>
+            </div>
     </header>
     <div class="container">
-      <div class="">
         <h1 class="mrg">Chausettes de ville</h1>
+        <div class="">
 
+            <div class="contenu_prod md">
+                <a href="#">
+                    <img class="img_prod" src="rouge-maison-close.jpg" alt="" />
+                </a>
+            </div>
+            <div class="contenu_prod md">
 
+            </div>
 
-
-      </div>
+        </div>
     </div>
 
 
 
 
 
-  </body>
+</body>
+
 </html>
