positionnement des image legerement ajuster

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <div class="container">
         <h1 class="mrg">Chausettes de ville</h1>
-        <div class="">
+        <div class="flex">
 
             <div class="contenu_prod md">
                 <a href="#">
@@ -64,7 +64,19 @@
                 </a>
             </div>
             <div class="contenu_prod md">
-
+                <a href="#">
+                    <img class="img_prod" src="chaussettes-rose-framboise.jpg" alt="" />
+                </a>
+            </div>
+            <div class="contenu_prod md">
+                <a href="#">
+                    <img class="img_prod" src="rose-panthere.jpg" alt="" />
+                </a>
+            </div>
+            <div class="contenu_prod md">
+                <a href="#">
+                    <img class="img_prod" src="rose-petite-fille.jpg" alt="" />
+                </a>
             </div>
 
         </div>
