ajout de la feuille rose dans le header

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
                     <li><a class="btn-hvr">Atelier</a></li>
                 </ul>
             </div>
-            <div class="carte">
+            <div class="card">
+              <div class="card-bottom">
 
+              </div>
             </div>
+
             <div class="nav">
                 <ul class="inr">
                     <li class="menu active">
@@ -53,6 +56,7 @@
                     </li>
                 </ul>
             </div>
+
     </header>
     <div class="container">
         <h1 class="mrg">Chausettes de ville</h1>
@@ -78,6 +82,8 @@
                     <img class="img_prod" src="rose-petite-fille.jpg" alt="" />
                 </a>
             </div>
+
+
 
         </div>
     </div>
